--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cnabBuilder",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "cnabRows.js",
   "repository": "https://github.com/gadielkalleb/cnabBuilder.git",
   "license": "MIT",
   "type": "module",
